src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~aos/dist/aos.css";
@import "~bootstrap/dist/css/bootstrap.css";

body {
  width: 100vw;
  padding-top: 56px;
  overflow-x: hidden;
}

.btn {
  border-radius: 20px;
}

.form-control {
  border-radius: 20px;
}

.social-links {
  font-size: 2em;
  color: white;
}

.social-links:hover {
  color: #0d6efd;
}

